Fixed all warnings.